--- a/2022_DAIE_GCA_JOR_MG.Rmd
+++ b/2022_DAIE_GCA_JOR_MG.Rmd
@@ -357,7 +357,7 @@ In the cleaned data 1 record has been removed.
 * Static (non-animated model content, VR)
 * Animated (animated model contend, VR)
 
-#### Control
+#### Control Group
 
 The control group has 1 less patient record after cleaning the data
 
@@ -366,18 +366,68 @@ control_group <- filter(data, test_group == "Control")
 control_group
 ```
 
-#### Static
+#### Static Group
 
 ```{r Create Static Group}
 static_group <- filter(data, test_group == "Static")
 static_group
 ```
 
-#### Animated
+#### Animated Group
 
 ```{r Create Animated Group}
 animated_group <- filter(data, test_group == "Animated")
 animated_group
+```
+
+### Histograms
+
+Histograms for each group
+
+#### Control
+
+```{r}
+## Control
+# CPSS
+mean_control_cpss <- mean(control_group$cpss_diff)
+sd_control_cpss <- sd(control_group$cpss_diff)
+hist(control_group$cpss_diff) # right
+# hist(rnorm(control_group, mean_control_cpss, sd_control_cpss))  # normal distibution (random sample values generated)
+
+# OR 
+mean_control_or <- mean(control_group$or_diff)
+sd_control_or<- sd(control_group$or_diff)
+hist(control_group$or_diff) # symmetric? / right?
+# hist(rnorm(control_group, mean_control_or, sd_control_or))
+
+
+## Static
+# CPSS
+mean_static_cpss <- mean(static_group$cpss_diff)
+sd_static_cpss <- sd(static_group$cpss_diff)
+hist(static_group$cpss_diff) # left skewed (outliers on right)
+# hist(rnorm(static_group, mean_static_cpss, sd_static_cpss))
+
+# OR 
+mean_static_or <- mean(static_group$or_diff)
+sd_static_or<- sd(static_group$or_diff)
+hist(static_group$or_diff) # left skewed
+# hist(rnorm(static_group, mean_static_or, sd_static_or))
+
+
+## Animated
+# CPSS
+mean_animated_cpss <- mean(animated_group$cpss_diff)
+sd_animated_cpss <- sd(animated_group$cpss_diff)
+hist(animated_group$cpss_diff) # left skewed
+# hist(rnorm(animated_group, mean_animated_cpss, sd_animated_cpss))
+
+# OR 
+mean_animated_or <- mean(animated_group$or_diff)
+sd_animated_or<- sd(animated_group$or_diff)
+hist(animated_group$or_diff) # left skewed
+# hist(rnorm(animated_group, mean_animated_or, sd_animated_or))
+
 ```
 
 
